bugfix(tooltip): removes scrollbar overflow from tooltip header

--- a/src/common/components/Tooltip/ItemHeader/styles.less
+++ b/src/common/components/Tooltip/ItemHeader/styles.less
@@ -3,10 +3,6 @@
 @borderDark: @_darkergray;
 @borderLight: @_gray;
 
-.itemHeader {
-  overflow: auto;
-}
-
 .itemName {
   font-size: 16px;
   height: 40px;
